a4/stage/tests/reject/unclosed_paren.ul
void main() {
    int s;
    s = 3 * (5 * 6;
}
